2006-01-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-wait-for-output): Wait always for the
	prompt.  If it returns earlier (when detecting an error message),
	the rest of the output will merge accidently with the output of
	the next command.  Reported by M Jared Finder <jared@hpalace.com>.

2006-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el: Add autoload for adding
	`tramp-completion-file-name-handler' to `file-name-handler-alist'.

	* tramp-vc.el (vc-user-login-name): Wrap defadvice with a test for
	`process-file', in order to let it work for older Emacsen too.

2006-01-22  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.52 released.

	* tramp.el, tramp-ftp.el, tramp-util.el, tramp-vc.el: Add code for
	unloading Tramp.  See comment before `tramp-unload-tramp' for
	checklist.

	* tramp.el (tramp-unload-file-name-handler-alist)
	(tramp-unload-tramp): New defuns.
	(tramp-advice-PC-expand-many-files): New defadvices.
	(tramp-save-PC-expand-many-files, tramp-setup-complete) Defuns
	removed.

	* tramp-ftp.el (tramp-ftp-enable-ange-ftp): New defun.

	* tramp-util.el (top): Apply `ignore' instead of `identity' for
	byte-compiler pacification.

2005-12-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-expand-file-name): Remove double slash.

2005-11-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-util.el (top): Fix compilation warning.

2005-11-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-attributes-with-ls): Return t as
	9th attribute.  It doesn't matter, because it will be converted
	later on.
	(tramp-handle-file-ownership-preserved-p): Rewritten.  The old
	implementation was just heuristic.
	(tramp-post-connection): Set uid and gid properties.
	(tramp-convert-file-attributes): Set file's gid change bit.
	(tramp-get-remote-uid, tramp-get-remote-gid): New defuns.

2005-11-09  Michael Albinus  <michael.albinus@gmx.de>
